added notes feature

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         </div>
     </div>
 
+    <!--Notes-->
+    <div class = "fixed">
+        <div class="bubble notes" contenteditable>My Notes</div>
+    </div>
+
     <!--Movement directions-->
     <div class="directions">
         <div>W</div>
