corrected walls and delete obsolete css

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="container_outer">
         <div class="container">
             <!--Walls-->
-            <img src="media/walls/main_wall.svg" class="wall main_wall">
-            <img src="media/walls/right_wall.svg" class="wall right_wall">
-            <img src="media/walls/left_wall.svg" class="wall left_wall">
-            <img src = "media/walls/floor.svg" class="wall floor">
-            <img src = "media/walls/top.svg" class="wall top">
-            <img src="media/walls/top.svg" class="wall back">
+            <img src="media/Walls/main_wall.svg" class="wall main_wall">
+            <img src="media/Walls/right_wall.svg" class="wall right_wall">
+            <img src="media/Walls/left_wall.svg" class="wall left_wall">
+            <img src = "media/Walls/floor.svg" class="wall floor">
+            <img src = "media/Walls/top.svg" class="wall top">
+            <img src="media/Walls/top.svg" class="wall back">
 
             <!--Equipment-->
             <div class="lab_stuff">
