--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <img src="media/Lab_equip/Beaker Ca(OH)2-01.svg" class="object beaker7 beakers">
                 <img src="media/Lab_equip/Beaker KOH-01.svg" class="object beaker8 beakers">
                 <img src="media/Lab_equip/Beaker Mg(OH)2-01.svg" class="object beaker9 beakers">
+
+                <!--Other objects-->
+                <img src = "media/objects/teacher.png" class = "object teacher">
             </div>
         </div>
     </div>
